# SDL2_2DPlatformer

./: CMakeLists.txt  main.cpp
Assets/Maps/Map1/: all_textures.txt
Assets/Maps/Map1/Level1/: Texture_Map.txt  Walkable_Map.txt
Assets/Maps/Map1/Level2/: Texture_Map.txt  Walkable_Map.txt
Assets/Maps/Map1/Level3/: Texture_Map.txt  Walkable_Map.txt
Assets/Maps/Map1/Level4/: Texture_Map.txt  Walkable_Map.txt
Assets/Maps/Map1/Level5/: Texture_Map.txt  Walkable_Map.txt
Assets/Maps/Map1/Level6/: Texture_Map.txt  Walkable_Map.txt
Assets/Maps/Map1/Level7/: Texture_Map.txt  Walkable_Map.txt
Assets/Player/Movement/: player_animation_sheet.txt
Assets/Spells/: Spells_Data  Spells_Data.xml
src/: Enemy.cpp  Enemy.h  Enemy_manager.cpp  Enemy_manager.h  FPSCounter.cpp  FPSCounter.h  Game_Engine.cpp  Game_Engine.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Player.cpp  Player.h
src/enemies/: Knight.cpp  Knight.h  Mage.cpp  Mage.h  Skeleton.cpp  Skeleton.h  Zombie.cpp  Zombie.h
